--- a/Text_Editor/Views/Documents/Create.cshtml
+++ b/Text_Editor/Views/Documents/Create.cshtml
@@ -1,30 +1,29 @@
 ﻿@model Text_Editor.Models.Document
+@using Microsoft.AspNetCore.Identity;
+@inject UserManager<IdentityUser> userManager;
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Document</h4>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" value="Untitled Document" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                
+                <textarea id="tiny" asp-for="Content" style="width: 65vw; height: 75vh"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                @*here we get the user id of the current logged in user*@
+                <input type="hidden" asp-for="UserId" class="form-control" value="@userManager.GetUserId(User)" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -34,7 +33,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info mt-3" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
