--- a/Text_Editor/Views/Documents/Edit.cshtml
+++ b/Text_Editor/Views/Documents/Edit.cshtml
@@ -24,9 +24,7 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-            <div>
+                <input type="submit" value="Save" class="btn btn-primary mt-3" />
                 <a class="btn btn-danger mt-3" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
             </div>
         </form>
