--- a/Text_Editor/Views/Documents/Index.cshtml
+++ b/Text_Editor/Views/Documents/Index.cshtml
@@ -4,44 +4,23 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="d-flex justify-content-center mb-4">Create or edit a document</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Content)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+<div class="d-flex justify-content-center align-items-center" style="width: 150px; height: 200px; background-color: lightblue; font-size: 100px">
+    <a asp-action="Create" style="text-decoration: none; color: black" class="d-flex justify-content-center align-items-center">+</a>
+</div>
+<span class="d-flex justify-content-start mt-2" style="font-weight: bold">Blank Document</span>
+
+<hr />
+
+<div class="row">
+@foreach (var item in Model)
+{
+    <div class="col-2">
+    <div class="d-flex justify-content-center align-items-center mb-2" style="width: 150px; height: 200px; background-color: lightgray; font-size: 100px">
+        <a asp-action="Edit" asp-route-id="@item.Id" style="text-decoration: none; color: black" class="d-flex justify-content-center align-items-center">📄</a>
+    </div>
+    <span style="font-weight: bold">@item.Title</span>
+    </div>
 }
-    </tbody>
-</table>
+</div>
